--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GeoFriends</string>
-
+    <string name="drawer_title">Menu</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
@@ -10,4 +10,14 @@
     <string name="sign_in">Click Sign In</string>
     <string name="sign_out">Log out</string>
     <string name="display_picture_content_description">display picture</string>
+
+    <string-array name="drawer_main_items_array">
+        <item>Home</item>
+        <item>Profile</item>
+        <item>Groups</item>
+        <item>Log out</item>
+    </string-array>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
